<resources>
    <string name="app_name">Настин Ежедневник</string>
    <string name="title">Название</string>
    <string name="descr">Описание</string>
    <string name="tasks">ЗАМЕТКИ</string>
    <string name="yourAccount">ВАШ АККАУНТ</string>
    <string name="login">Логин:</string>
    <string name="pass">Пароль:</string>
    <string name="calendar">КАЛЕНДАРЬ📅</string>
    <string name="yourDay">ВАШ ДЕНЬ</string>
    <string name="records">ДНЕВНИК</string>
    <string name="authorization">Авторизация</string>
    <string name="user">пользователь</string>
    <string name="passlittle">пароль</string>
    <string name="signin">войти</string>
    <string name="registration">Регистрация</string>
    <string name="repeatPass">повторите пароль</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="haveAcc">уже есть аккаунт?</string>
    <string name="note">ЗАПИСЬ</string>
    <string name="selectDate">Выбрать дату:</string>
    <string name="del">УДАЛИТЬ</string>
    <string name="story">ИСТОРИЯ</string>
    <string name="rateDay">выберите эмоцию,\nкоторую сейчас \nиспытываете ⬆️</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="statisticMounth"><u>Статистика за месяц</u></string>
    <string name="statisticYear"><u>Статистика за год</u></string>
    <string name="statisticWeek"><u>Статистика за неделю</u></string>
    <string name="noData">Данных недостаточно для выбранного периода.\n Начните заполнять Дневник и увидите статистку
        изменения ваших эмоций 📊</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="yourFeeling">Как Вы себя чувствуете?</string>
    <string name="yourЕvents">Какие события или обстоятельства привели к тому, что Вы почувствовали эту эмоцию?</string>
    <string name="yourDescrDay">Опишите свой день</string>
    <string name="mostEmotion"><font color="#008080">Вы испытали эту эмоцию чаще всего за\n</font></string>
    <string name="happyHour"><font color="#DDA0DD">Ваш счатливый час - </font></string>
    <string name="mostEmotion2"><font color="#008080">Вы испытывали эту эмоцию чаще всего за неделю</font></string>


</resources>