<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/kaktus2"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/username1"
        android:hint="@string/user"
        android:textSize="25dp"
        android:textColorHint="@color/darkGray"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_height="58dp"
        android:id="@+id/password1"
        android:hint="@string/passlittle"
        android:textSize="25dp"
        android:textColorHint="@color/darkGray"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/signin1"
        android:text="@string/signin"
        android:textSize="20dp"
        android:backgroundTint="@color/lightGray"
        android:layout_marginTop="100dp"/>




</LinearLayout>