<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".graph.GraphMounthFragment">


    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/statisticWeek"
        android:textColor="@color/teal_200"
        android:textSize="12dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/statisticYear"
        android:textColor="@color/teal_200"
        android:textSize="12dp"
        android:gravity="center"
        android:layout_gravity="start"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="11dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:background="@drawable/left"/>

    <TextView
        android:layout_width="11dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rigth"/>

    <TextView
        android:id="@+id/noData"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/noData"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_gravity="center|top"
        />


    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphMounth"
        android:layout_marginTop="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="4dp"
        android:visibility="gone"
        />

</FrameLayout>