<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hearts"
    android:orientation="vertical"
    android:id="@+id/confetti_container"

    tools:context=".AccountActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/head"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yourAccount"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_exit_to_app"
            android:paddingTop="11dp"
            android:onClick="click_del_users"/>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/calmGreen"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/calmGreen"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Праздник"/>





</LinearLayout>