<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DiaryDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/head"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yourDay"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"

            android:layout_marginRight="15dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_save_24"
            android:onClick="saveRecord"
            android:paddingTop="11dp" />

        <Button
            android:id="@+id/deleteButton2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/red"
            android:drawableTop="@drawable/ic_baseline_delete_24"
            android:onClick="deleteRecord"
            android:paddingTop="11dp" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/smileBtn"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_marginStart="40sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/btn_choose_smile"
                android:onClick="chooseSmile"
                android:text="+"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15sp"
                android:layout_marginTop="8dp"
                android:text="@string/rateDay"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-95dp"
                android:layout_marginBottom="76dp"
                android:text="6 6 6 "
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/yourFeeling"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yourFeeling"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:freezesText="true"
                android:gravity="start"
                android:minLines="3"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/yourЕvents"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yourEvents"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:freezesText="true"
                android:gravity="start"
                android:minLines="3"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/yourDescrDay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yourDescrDay"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:freezesText="true"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>